MiniDBMS/edu/purdue/cs448/DBMS/DBInterpreter.java
/* DBInterpreter.java */
/* Generated By:JavaCC: Do not edit this line. DBInterpreter.java */
    package edu.purdue.cs448.DBMS;


    import edu.purdue.cs448.DBMS.Structure.*;
    import java.util.*;
    import java.io.InputStream;
    import java.io.IOException;

    public class DBInterpreter implements DBInterpreterConstants {
        public static void main(String[] args) throws IOException{
            DBInterpreter interpreter;
            DBExecutor executor;
            Query query;
            InputStream input;

            if (args.length > 1) {
                System.out.println("Use: dbmsinterpreter <input file>");
                return;
            }

            if (args.length == 1) {
                try {
                    input = new java.io.FileInputStream(args[0]);
                    interpreter = new DBInterpreter(input);
                } catch (java.io.FileNotFoundException ex) {
                        System.out.println("File " + args[0] + " not found.");
                        return;
                }

            } else{
                    input = System.in;
                    interpreter = new DBInterpreter(input);

            }
                executor = new DBExecutor();
                while(true){
                        try {
                                //Prompt when in interactive mode
                                if(input == System.in){
                                        System.out.print("YSQL>>");
                                }
                                query = interpreter.Query();

                                if(query == null){
                                        return;
                                }

                                executor.execute(query);
                                if(input != System.in && input.available() == 0){
                                        return;
                                }
                        } catch (ParseException ex) {
                                System.err.println(ex.getMessage());
                                return;
                        } catch (Error ex){
                                System.err.println(ex.getMessage());
                                return;
                        } catch (IOException ex){
                                System.err.println("YSQL: IO Exception");
                                return;
                        }
                }


     }

// Grammar
  final public Query Query() throws ParseException {Query query;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 0:{
      jj_consume_token(0);
{if ("" != null) return null;}
      break;
      }
    case KWORD_SELECT:
    case KWORD_INSERT:
    case KWORD_UPDATE:
    case KWORD_CREATE:
    case KWORD_DELETE:
    case KWORD_DROP:
    case KWORD_HELP:
    case KWORD_QUIT:{
      query = SQLStatement();
      jj_consume_token(SYM_SEMICOLON);
{if ("" != null) return query;}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// FILLIN: Remainder of the grammar
  final public Query SQLStatement() throws ParseException {Query query;
    if (jj_2_1(2)) {
      jj_consume_token(KWORD_CREATE);
      jj_consume_token(KWORD_TABLE);
      query = Create();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KWORD_DROP:{
        jj_consume_token(KWORD_DROP);
        jj_consume_token(KWORD_TABLE);
        query = Drop();
        break;
        }
      case KWORD_SELECT:{
        jj_consume_token(KWORD_SELECT);
        query = Select();
        break;
        }
      case KWORD_INSERT:{
        jj_consume_token(KWORD_INSERT);
        jj_consume_token(KWORD_INTO);
        query = Insert();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        if (jj_2_2(2)) {
          jj_consume_token(KWORD_DELETE);
          jj_consume_token(KWORD_FROM);
          query = Delete();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case KWORD_UPDATE:{
            jj_consume_token(KWORD_UPDATE);
            query = Update();
            break;
            }
          case KWORD_HELP:{
            jj_consume_token(KWORD_HELP);
            query = Help();
            break;
            }
          case KWORD_QUIT:{
            jj_consume_token(KWORD_QUIT);
            query = Quit();
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            if (jj_2_3(2)) {
              jj_consume_token(KWORD_CREATE);
              jj_consume_token(KWORD_USER);
              query = CreateUser();
            } else {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case KWORD_DELETE:{
                jj_consume_token(KWORD_DELETE);
                jj_consume_token(KWORD_USER);
                query = DeleteUser();
                break;
                }
              case KWORD_CREATE:{
                jj_consume_token(KWORD_CREATE);
                jj_consume_token(KWORD_SUBSCHEMA);
                query = CreateSubschema();
                break;
                }
              default:
                jj_la1[3] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      }
    }
{if ("" != null) return query;}
    throw new Error("Missing return statement in function");
  }

  final public CreateSubschema CreateSubschema() throws ParseException {Query query;
        Token tableName;
        Token attrName;
        ArrayList<String> attrNameList = new ArrayList<String>();
    tableName = Identifier();
    attrName = Identifier();
attrNameList.add(attrName.image);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_COMMA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
      jj_consume_token(SYM_COMMA);
      attrName = Identifier();
attrNameList.add(attrName.image);
    }
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
  }

  final public CreateUser CreateUser() throws ParseException {Query query;
     Token userName;
     boolean userType;
    userName = Identifier();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 56:{
      jj_consume_token(56);
userType = true;
      break;
      }
    case 57:{
      jj_consume_token(57);
userType = false;
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
  }

  final public DeleteUser DeleteUser() throws ParseException {Query query;
    Token userName;
    userName = Identifier();
{if ("" != null) return null;}
    throw new Error("Missing return statement in function");
  }

  final public Create Create() throws ParseException {Token tableName;
    Token attrName;
    ArrayList<Attribute> attrList = new ArrayList<Attribute>();
    Hashtable<String, Integer> attrPosTable = new Hashtable<String, Integer>();
    Attribute attribute;
    Token lengthToken = null;
    Condition cond = null;
    Attribute.Type type;
    ArrayList<Integer> primaryList = new ArrayList<Integer>();
    Token foreignTableName;
    Token foreignAttribute;
    tableName = Identifier();
    jj_consume_token(SYM_LPARENTHESE);
    label_2:
    while (true) {
      attrName = Identifier();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KWORD_DECIMAL:{
        jj_consume_token(KWORD_DECIMAL);
type = Attribute.Type.DECIMAL;
        break;
        }
      case KWORD_INT:{
        jj_consume_token(KWORD_INT);
type = Attribute.Type.INT;
        break;
        }
      case KWORD_CHAR:{
        jj_consume_token(KWORD_CHAR);
type = Attribute.Type.CHAR;
        jj_consume_token(SYM_LPARENTHESE);
        lengthToken = jj_consume_token(INT_LITERAL);
        jj_consume_token(SYM_RPARENTHESE);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KWORD_CHECK:{
        jj_consume_token(KWORD_CHECK);
        jj_consume_token(SYM_LPARENTHESE);
        cond = Condition();
        jj_consume_token(SYM_RPARENTHESE);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      jj_consume_token(SYM_COMMA);
if(cond != null && !cond.idCheck(attrName.image))
                        {if (true) throw new Error("CREATE TABLE: CHECK ATTRIBUTE INVALID " + attrName.image);}
                attribute = new Attribute(type, attrName.image);
                if(lengthToken != null)attribute.setLength(Integer.parseInt(lengthToken.image));
                if(cond != null)attribute.setCheckCond(cond);
                if(!attrList.contains(attribute)){
                        //Save position of attribute name
                        attrPosTable.put(attrName.image, Integer.valueOf(attrList.size()));
                        attrList.add(attribute);
                }else
                        {if (true) throw new Error("CREATE TABLE: DUPLICATED ATTRIBUTES");}
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(KWORD_PRIMARY);
    jj_consume_token(KWORD_KEY);
    jj_consume_token(SYM_LPARENTHESE);
    attrName = Identifier();
if( !primaryList.contains(attrName.image) && attrList.contains( new Attribute(Attribute.Type.INT, attrName.image) ) )
                                primaryList.add(attrPosTable.get(attrName.image));
                        else
                                {if (true) throw new Error("CREATE TABLE: INVALID PRIMARY KEY " + attrName.image);}
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_COMMA:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      jj_consume_token(SYM_COMMA);
      attrName = Identifier();
if( !primaryList.contains(attrName.image) && attrList.contains( new Attribute(Attribute.Type.INT, attrName.image) ) )
                                primaryList.add(attrPosTable.get(attrName.image));
                        else
                                {if (true) throw new Error("CREATE TABLE: INVALID PRIMARY KEY " + attrName.image);}
    }
    jj_consume_token(SYM_RPARENTHESE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_COMMA:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      jj_consume_token(SYM_COMMA);
      jj_consume_token(KWORD_FOREIGN);
      jj_consume_token(KWORD_KEY);
      jj_consume_token(SYM_LPARENTHESE);
      attrName = Identifier();
      jj_consume_token(SYM_RPARENTHESE);
      jj_consume_token(KWORD_REF);
      foreignTableName = Identifier();
      jj_consume_token(SYM_LPARENTHESE);
      foreignAttribute = Identifier();
      jj_consume_token(SYM_RPARENTHESE);
if(!attrList.contains(new Attribute(Attribute.Type.INT, attrName.image)))
                                {if (true) throw new Error("CREATE TABLE: FOREIGN KEY " + attrName.image + " NOT EXISTS");}

                        if(foreignTableName.image.equals(tableName.image))
                                {if (true) throw new Error("CREATE TABLE: FOREIGN KEY TABLE CANNOT BE THE SAME NAME");}
    }
    jj_consume_token(SYM_RPARENTHESE);
{if ("" != null) return new Create(tableName.image, attrList, primaryList, null, attrPosTable);}
    throw new Error("Missing return statement in function");
  }

  final public Drop Drop() throws ParseException {Drop dropQuery;
        Token tableName;
    tableName = Identifier();
{if ("" != null) return new Drop(tableName.image);}
    throw new Error("Missing return statement in function");
  }

  final public Select Select() throws ParseException {Token attribute;
        ArrayList<String> attrNameList = new ArrayList<String>();
        Token table;
        ArrayList<String> tableList = new ArrayList<String>();
        Condition cond = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      attribute = Identifier();
attrNameList.add(attribute.image);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SYM_COMMA:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_5;
        }
        jj_consume_token(SYM_COMMA);
        attribute = Identifier();
attrNameList.add(attribute.image);
      }
      break;
      }
    case SYM_ASTERISK:{
      attribute = jj_consume_token(SYM_ASTERISK);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(KWORD_FROM);
    table = Identifier();
tableList.add(table.image);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_COMMA:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      jj_consume_token(SYM_COMMA);
      table = Identifier();
tableList.add(table.image);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KWORD_WHERE:{
      jj_consume_token(KWORD_WHERE);
      cond = Condition();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
if(attribute.image.equals("*"))
                        {if ("" != null) return new Select(tableList, cond, true);}
                else
                        {if ("" != null) return new Select(attrNameList, tableList, cond);}
    throw new Error("Missing return statement in function");
  }

  final public Insert Insert() throws ParseException {Token table;
        Token value;
        ArrayList<String> valueList = new ArrayList<String>();
    table = Identifier();
    jj_consume_token(KWORD_VALUES);
    jj_consume_token(SYM_LPARENTHESE);
    value = InsertValue();
valueList.add(value.image);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_COMMA:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_7;
      }
      jj_consume_token(SYM_COMMA);
      value = InsertValue();
valueList.add(value.image);
    }
    jj_consume_token(SYM_RPARENTHESE);
{if ("" != null) return new Insert(table.image, valueList);}
    throw new Error("Missing return statement in function");
  }

  final public Delete Delete() throws ParseException {Token table;
        Condition cond = null;
    table = Identifier();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KWORD_WHERE:{
      jj_consume_token(KWORD_WHERE);
      cond = Condition();
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
{if ("" != null) return new Delete(table.image, cond);}
    throw new Error("Missing return statement in function");
  }

  final public Update Update() throws ParseException {Token table;
        Condition cond = null;
        AttrAssign attrAssign;
        ArrayList<AttrAssign> attrAssignList = new ArrayList<AttrAssign>();
    table = Identifier();
    jj_consume_token(KWORD_SET);
    attrAssign = AttrAssign();
attrAssignList.add(attrAssign);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_COMMA:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_8;
      }
      jj_consume_token(SYM_COMMA);
      attrAssign = AttrAssign();
attrAssignList.add(attrAssign);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KWORD_WHERE:{
      jj_consume_token(KWORD_WHERE);
      cond = Condition();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
{if ("" != null) return new Update(table.image, attrAssignList, cond);}
    throw new Error("Missing return statement in function");
  }

  final public Help Help() throws ParseException {Token describeToken;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KWORD_DESCRIBE:{
      jj_consume_token(KWORD_DESCRIBE);
      describeToken = Identifier();
{if ("" != null) return new Help(Help.HelpType.DESCRIBE, describeToken.image);}
      break;
      }
    case KWORD_CREATE:{
      jj_consume_token(KWORD_CREATE);
      jj_consume_token(KWORD_TABLE);
{if ("" != null) return new Help(Help.HelpType.CREATE);}
      break;
      }
    case KWORD_DROP:{
      jj_consume_token(KWORD_DROP);
      jj_consume_token(KWORD_TABLE);
{if ("" != null) return new Help(Help.HelpType.DROP);}
      break;
      }
    case KWORD_SELECT:{
      jj_consume_token(KWORD_SELECT);
{if ("" != null) return new Help(Help.HelpType.SELECT);}
      break;
      }
    case KWORD_INSERT:{
      jj_consume_token(KWORD_INSERT);
{if ("" != null) return new Help(Help.HelpType.INSERT);}
      break;
      }
    case KWORD_DELETE:{
      jj_consume_token(KWORD_DELETE);
{if ("" != null) return new Help(Help.HelpType.DELETE);}
      break;
      }
    case KWORD_UPDATE:{
      jj_consume_token(KWORD_UPDATE);
{if ("" != null) return new Help(Help.HelpType.UPDATE);}
      break;
      }
    case KWORD_TABLES:{
      jj_consume_token(KWORD_TABLES);
{if ("" != null) return new Help(Help.HelpType.TABLES);}
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Query Quit() throws ParseException {
    jj_consume_token(SYM_SEMICOLON);
System.exit(0); {if ("" != null) return null;}
    throw new Error("Missing return statement in function");
  }

  final public AttrAssign AttrAssign() throws ParseException {Token attribute;
        Value value;
    attribute = Identifier();
    jj_consume_token(SYM_EQUAL);
    value = UpdateValue();
{if ("" != null) return new AttrAssign(attribute.image, value);}
    throw new Error("Missing return statement in function");
  }

  final public Condition Condition() throws ParseException {Exp exp;
        Condition cond;
    exp = LogicOp();
{if ("" != null) return new Condition(exp);}
    throw new Error("Missing return statement in function");
  }
